--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,12 @@ framework = arduino
 lib_deps =
     adafruit/Adafruit GFX Library @ ^1.11.10
     adafruit/Adafruit SSD1306 @ ^2.5.11
+
+build_flags =
+    -DDISPLAY_ADDR=0x3C
+    -DSCREEN_WIDTH=128
+    -DSCREEN_HEIGHT=64
+    -DOLED_RESET=-1
+
+test_build_src = true
+
