--- a/platformio.ini
+++ b/platformio.ini
@@ -17,10 +17,10 @@ lib_deps =
 	adafruit/Adafruit GFX Library @ ^1.11.10
 	adafruit/Adafruit SSD1306 @ ^2.5.11
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.4
+	thomasfredericks/Bounce2@^2.72
 build_flags = 
 	-DDISPLAY_ADDR=0x3C
 	-DSCREEN_WIDTH=128
 	-DSCREEN_HEIGHT=64
 	-DOLED_RESET=-1
 test_build_src = true
-
