Add andother display driver: ILI9341
Signed-off-by: Marco Mora <morafoo@gmail.com>

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ lib_deps =
 	adafruit/Adafruit GFX Library @ ^1.11.10
 	adafruit/Adafruit SSD1306 @ ^2.5.11
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.4
+	adafruit/Adafruit ILI9341@^1.6.1
 build_flags = 
 	-DDISPLAY_ADDR=0x3C
 	-DSCREEN_WIDTH=128
