--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,8 @@ lib_deps =
 	adafruit/Adafruit SSD1306 @ ^2.5.11
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.4
 	thomasfredericks/Bounce2@^2.72
+	bodmer/TFT_eSPI @ ^2.5.43
+
 build_flags = 
 	-DDISPLAY_ADDR=0x3C
 	-DSCREEN_WIDTH=128
