Removed IDisplay class, each display should instanciate its corresponding driver
Signed-off-by: Marco Mora <m.mora@intel.com>

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,4 +25,13 @@ build_flags =
 	-DSCREEN_WIDTH=128
 	-DSCREEN_HEIGHT=64
 	-DOLED_RESET=-1
+	-DST7735_DRIVER=1
+	-DTFT_RGB_ORDER=TFT_RGB
+	-DTFT_MISO=19
+	-DTFT_MOSI=23
+	-DTFT_SCLK=18
+	-DTFT_CS=5
+	-DTFT_DC=19
+	-DTFT_RST=-1
 test_build_src = true
+
