remove driver Adafruit_ST7735 and use TFT_eSPI instead
Signed-off-by: Marco Mora <m.mora@intel.com>

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,16 +16,17 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit GFX Library @ ^1.11.10
 	adafruit/Adafruit SSD1306 @ ^2.5.11
-	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.4
+	;adafruit/Adafruit ST7735 and ST7789 Library@^1.10.4
 	thomasfredericks/Bounce2@^2.72
 	bodmer/TFT_eSPI @ ^2.5.43
+    ayushsharma82/ElegantOTA @ ^3.1.6
 
 build_flags = 
 	-DDISPLAY_ADDR=0x3C
 	-DSCREEN_WIDTH=128
 	-DSCREEN_HEIGHT=64
 	-DOLED_RESET=-1
-	-DUSER_SETUP_LOADED
+	-DUSER_SETUP_LOADED  ; to avoid using Setup_User.h file, instad define the values here
 	-DST7735_DRIVER=1
 	-DTFT_RGB_ORDER=TFT_RGB
 	-DTFT_MISO=19
@@ -45,5 +46,6 @@ build_flags =
 	-DSPI_FREQUENCY=27000000
 	-DSPI_READ_FREQUENCY=20000000
 	-DSPI_TOUCH_FREQUENCY=2500000
+	-D ELEGANTOTA_USE_ASYNC_WEBSERVER=1
 test_build_src = true
 
