--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ lib_deps =
 	thomasfredericks/Bounce2@^2.72
 	bodmer/TFT_eSPI @ ^2.5.43
     ayushsharma82/ElegantOTA @ ^3.1.6
-
+	adafruit/RTClib @ ^2.1.4
 build_flags = 
 	-DDISPLAY_ADDR=0x3C
 	-DSCREEN_WIDTH=128
