--- a/platformio.ini
+++ b/platformio.ini
@@ -16,10 +16,9 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit GFX Library @ ^1.11.10
 	adafruit/Adafruit SSD1306 @ ^2.5.11
-	;adafruit/Adafruit ST7735 and ST7789 Library@^1.10.4
 	thomasfredericks/Bounce2@^2.72
 	bodmer/TFT_eSPI @ ^2.5.43
-    ayushsharma82/ElegantOTA @ ^3.1.6
+        ayushsharma82/ElegantOTA @ ^3.1.6
 	adafruit/RTClib @ ^2.1.4
 build_flags = 
 	-DDISPLAY_ADDR=0x3C
@@ -27,6 +26,7 @@ build_flags =
 	-DSCREEN_HEIGHT=64
 	-DOLED_RESET=-1
 	-DUSER_SETUP_LOADED  ; to avoid using Setup_User.h file, instad define the values here
+	-DDISABLE_ALL_LIBRARY_WARNINGS  ; to avoid warnings in the TFT_eSPI library
 	-DST7735_DRIVER=1
 	-DTFT_RGB_ORDER=TFT_RGB
 	-DTFT_MISO=19
