--- a/platformio.ini
+++ b/platformio.ini
@@ -18,8 +18,10 @@ lib_deps =
 	adafruit/Adafruit SSD1306 @ ^2.5.11
 	thomasfredericks/Bounce2@^2.72
 	bodmer/TFT_eSPI @ ^2.5.43
-        ayushsharma82/ElegantOTA @ ^3.1.6
+    ayushsharma82/ElegantOTA @ ^3.1.6
 	adafruit/RTClib @ ^2.1.4
+	bblanchon/ArduinoJson @ ^7.3.0
+	witnessmenow/UniversalTelegramBot @ ^1.3.0
 build_flags = 
 	-DDISPLAY_ADDR=0x3C
 	-DSCREEN_WIDTH=128
